# LWG

./: .gitignore  CMakeLists.txt  lwg-active.html  lwg-closed.html  lwg-immediate.html  lwg-index-open.html  lwg-index.html  lwg-status-date.html  lwg-status.html  lwg-tentative.html  lwg-toc.html  lwg-unresolved.html  unresolved-index.html  unresolved-prioritized.html  unresolved-status-date.html  unresolved-status.html  unresolved-toc.html  votable-index.html  votable-status-date.html  votable-status.html  votable-toc.html
.github/workflows/: check-build.yml  check-pr.yml
xml/: issue4170.xml
